# gum

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  gum.pc.in  vcpkg.json
cmake/: config.cmake.in  gum-config.cmake.in
cmake/modules/: AutoVcpkg.cmake  FindGFAKluge.cmake  FindParallelHashmap.cmake  FindSDSL.cmake  FindSparseHash.cmake  Findlibbdsg.cmake  Findsdsl.cmake
ext/: external.cmake
include/gum/: alphabet.hpp  base.hpp  basic_types.hpp  basic_utils.hpp  bdsg_base.hpp  bdsg_utils.hpp  config.hpp.in  coordinate.hpp  digraph_base.hpp  digraph_dynamic.hpp  digraph_succinct.hpp  digraph_traits_base.hpp  digraph_traits_dynamic.hpp  digraph_traits_succinct.hpp  diseqgraph.hpp  diseqgraph_base.hpp  diseqgraph_dynamic.hpp  diseqgraph_succinct.hpp  edge_prop_base.hpp  edge_prop_dynamic.hpp  edge_prop_succinct.hpp  gfa_utils.hpp  graph.hpp  graph_prop_base.hpp  graph_prop_dynamic.hpp  graph_prop_succinct.hpp  graph_traits_base.hpp  graph_traits_dynamic.hpp  graph_traits_succinct.hpp  hg_utils.hpp  io_utils.hpp  io_utils_hg.hpp  io_utils_vg.hpp  iterators.hpp  node_prop_base.hpp  node_prop_dynamic.hpp  node_prop_succinct.hpp  seqgraph.hpp  seqgraph_base.hpp  seqgraph_dynamic.hpp  (+8 more)
src/: alphabet.hpp  base.h  base.hpp  basic_types.h  basic_types.hpp  basic_utils.h  basic_utils.hpp  benchmark.cpp  gfa_utils.hpp  io_utils.hpp  iterators.hpp  seqgraph.h  seqgraph.hpp  seqgraph_base.h  seqgraph_base.hpp  stringset.hpp  utils.h  utils.hpp  vg_inspect.py  vg_utils.h  vg_utils.hpp
test/: CMakeLists.txt
test/data/: complex_v1.gfa  complex_v2.gfa  dfs_cyclic_v1.gfa  dfs_cyclic_v2.gfa  dfs_dag_v1.gfa  dfs_dag_v2.gfa  graph_simple.hg.vg  graph_simple.pb.vg  graph_simple.vg  graph_simple_v1.gfa  graph_simple_v2.gfa  hprc-v1.0-minigraph-chm13-subgraph_v1.gfa  hprc-v1.0-minigraph-chm13-subgraph_v2.gfa  tiny_p1.gfa  tiny_p1.hg.vg  tiny_p1.vg  tiny_p2.gfa  tiny_p2.hg.vg  tiny_p2.pb.vg  tiny_v1.gfa
test/src/: test_alphabet.cpp  test_base.hpp  test_config.hpp.in  test_ioutils.cpp  test_iterators.cpp  test_main.cpp  test_seqgraph.cpp  test_stringset.cpp  test_types.cpp  test_utils.cpp
tools/: CMakeLists.txt
tools/src/: gbenchmark.cpp  gstats.cpp
